src/objects/Consulta_Datacredito__c.object
<CustomObject>
    <fields>
        <fullName>Consultante__c</fullName>
        <label>Consultante</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultas_Mes__c</fullName>
        <label>Consultas Mes</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datacredito__c</fullName>
        <label>Datacredito</label>
        <referenceTo>Datacredito__c</referenceTo>
        <relationshipLabel>Consultas Datacredito</relationshipLabel>
        <relationshipName>Consultas_Datacredito</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>